ingress/app_group/face_search/face_search_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: face-search-deployment
  name: face-search-deployment
  namespace: face-search
spec:
  replicas: 2
  selector:
    matchLabels:
      app: face-search-deployment
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: face-search-deployment
    spec:
      serviceAccountName: face-search-service-account
      containers:
        - image: 109412806537.dkr.ecr.us-east-1.amazonaws.com/app-face-search:63
          name: face-search
          ports:
            - containerPort: 8000
