ingress/app_group/face_search/face_search_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: face-search-service
  namespace: face-search
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: face-search-deployment
