ingress/app_group/face_search/face_search_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: app-group
    alb.ingress.kubernetes.io/group.order: "1"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:109412806537:certificate/6f2874c6-4aa0-40d3-a255-868b1f64442e
    alb.ingress.kubernetes.io/healthcheck-port: "8000"
    alb.ingress.kubernetes.io/success-codes: 200,201
    alb.ingress.kubernetes.io/healthcheck-path: /search/faces/health_check
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: face-search-ingress
  namespace: face-search
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /search/faces
            pathType: Prefix
            backend:
              service:
                name: face-search-service
                port:
                  number: 80
